# TestBeamMC

PFCal/: README.md
PFCal/PFCalEE/: .gitignore  CMakeLists.txt  PFCalEE.cc  README.md  VERSIONS  checkTreesIntegrity.py  currentEvent.rndm  currentRun.rndm  g4env.sh  g4env4lpc.csh  g4env4lpc.sh  makeG4  runWithPU.sh  submitDigi.py  submitEGReso.py  submitProd.py  submitProdLPC.py  submitRun.py  submitRunHEPMC.py  tbProd.sh  utils.py  yumiao.cc
PFCal/PFCalEE/analysis/: README.md  makefile  runAllFill.sh  runCheck.sh  runDigiForAll.sh  submitHiggs.py  submitNabove.py  submitPuMixing.py
PFCal/PFCalEE/analysis/include/: Clusterizer.hh  HGCSSCaloProperties.hh  HGCSSParameters.hh  HadEnergy.hh  HiggsMass.hh  InputParserBase.h  KDTreeLinkerToolsT.h  PositionFit.hh  SignalRegion.hh  parameterScan.hh  utilities.h
PFCal/PFCalEE/analysis/macros/: EvtDisplay.C  TDRStyle.h  compareSquareHexa.C  eMinimisation.C  eMinimisationHgg.C  effSigmaMacro.C  fitEnergy.C  logWeightingScan.C  logWeightingScanAll.C  makeBackLeakCor.C  makeCalibration.C  makePuSigma.C  makeResolution.C  plotBasics.C  plotClusters.C  plotDensity.C  plotE.C  plotEGReso.C  plotEGReso.cc  plotEcor.C  plotEfromTree.C  plotEmissed.C  plotGlobalCor.C  plotHiggsMass.C  plotHits.C  plotLateralSize.C  plotMaxCharge.C  plotMaxEhit.C  plotMaxEhitBHCAL.C  plotMaxEhitHCAL.C  plotMipHistos.C  plotMipHistosForMu.C  plotMomentumMinbias.C  plotMomentumMuonsBHCAL.C  plotMomentumShowerMax.C  plotNaboveMax.C  plotOOTpu.C  plotOcc.C  plotOutliers.C  plotPions.C  (+19 more)
PFCal/PFCalEE/analysis/scripts/: DefaultConfig.cfg  HadronConfig.cfg  HadronConfigAM.cfg  MaxCharge.cfg  MipProfile.cfg  MipSelection.cfg  MipStudy.cfg  OOT.cfg  simpleBH.cfg
PFCal/PFCalEE/analysis/src/: Clusterizer.cc  HGCSSCaloProperties.cc  HadEnergy.cc  HiggsMass.cc  InputParserBase.cc  PositionFit.cc  SignalRegion.cc  parameterScan.cc
PFCal/PFCalEE/analysis/test/: EvtDisplay.cpp  MinBias.cpp  MixPUSignal.cpp  checkProduction.cpp  compareCaloStackPerformances.cpp  debugDigi.cpp  dumpHitRates.cpp  dumpHits.cpp  egammaResoWithTruth.cpp  egammaResolution.cpp  fitPosition.cpp  getAbsorberWeight.cpp  globalCompensation.cpp  hadronResolution.cpp  higgsResolution.cpp  maxChargeStudy.cpp  mipAnalysis.cpp  mipDeposit.cpp  mipHistos.cpp  mipProfile.cpp  mipSelection.cpp  mipStudy.cpp  ootpuOnHiggsPhotons.cpp  parameterSpace.cpp  plotMacro.cpp  plotMomentum.cpp  plotNabove100fC.cpp  preparePUevents.cpp  simpleBH.cpp  validateCalice.cpp  validation.cpp
PFCal/PFCalEE/g4build/: CMakeCache.txt  Makefile  cmake_install.cmake
PFCal/PFCalEE/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SamplingSection.hh  SteppingAction.hh
PFCal/PFCalEE/macros/: gui.mac  run1.mac  vis.mac  visOGL.mac
PFCal/PFCalEE/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SamplingSection.cc  SteppingAction.cc
PFCal/PFCalEE/userlib/: DigiConfig.cfg  README.md  makefile  submitDigi4LPC.py
PFCal/PFCalEE/userlib/include/: G4SiHit.hh  HGCSSCalibration.hh  HGCSSCluster.hh  HGCSSDetector.hh  HGCSSDigitisation.hh  HGCSSEvent.hh  HGCSSGenParticle.hh  HGCSSGeometryConversion.hh  HGCSSInfo.hh  HGCSSMipHit.hh  HGCSSPUenergy.hh  HGCSSRecoHit.hh  HGCSSRecoJet.hh  HGCSSSamplingSection.hh  HGCSSSimHit.hh  LinkDef.h  PCAShowerAnalysis.h
(+111 files in other folders)
